Version 0.1
------

  * Renamed the project and the main module to checklists_scrapers. The
    project is part of a group designed to work with the django-checklists
    database and the association is clearer with the change in name.
  * Changed the licence from GPLv3 to BSD so it is compatible with the other
    projects in the checklists "group".
  * Changes the prefix used on the environment variables from "CHECKLISTING"
    to "CHECKLISTS" to minimise the number that must be set when used the
    scrapers with the django-checklists app.
  * Added scripts to run the site tests for each scraper. This makes it
    easier to pass in the parameters for the site to be scraped rather than
    defining them in the settings.
  * Configuring the scrapers is now done through environment variables rather
    than a local settings file. This makes it much easier to install and run
    the scrapers, particularly from the most common use-case of calling them
    from cron or a similar scheduler.
  * Removed the scrapy project file since the settings file will typically be
    set using an environment variable.
  * Fixed the version of scrapy to use, to 0.16.4 for now, since there are
    (distracting), deprecated calls when using the latest version (0.20.2).
  * Updated the logging so records found only on the web page for an eBird
    checklist are only reported as warnings when the logging level is set to
    DEBUG. This avoids any confusion in production since the warnings are only
    used to debug issues with the eBird API.
  * The status report is now written to the directory where checklists are
    downloaded when the logging level is set to 'DEBUG'.
  * Fixed bugs caused by unexpected missing fields when downloading checklists
    from eBird.

Version 0.1b2
-------------

  * Fixed docs structure so it can be built by readthedocs.org.

Version 0.1b1
-------------

  * Added sphinx for document generation.