@@ -1,7 +1,7 @@
 """Scrapy scrapers for each on-line database."""
 
 # The version of the JSON data structure used to represent the checklist.
-CHECKLIST_FILE_FORMAT_VERSION = 1
+CHECKLISTS_DOWNLOAD_FORMAT = 1
 
 # The default ISO 639-1 Code for the language used in the file.
-CHECKLIST_FILE_LANGUAGE = 'en'
+CHECKLISTS_DOWNLOAD_LANGUAGE = 'en'
